# findstr-bench

./: CMakeLists.txt  README.md  findstr.cpp
